feat: created reset method example in demo

--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -13,4 +13,6 @@
     <input name="Todo" placeholder="Enter todo..." formControlName="todo" />
     <button type="submit">Add</button>
   </form>
+
+  <button (click)="resetWholeState()">Reset state</button>
 </main>
